Bug 363954 - CSV Importer doesn't import fees with comma as decimal separator
Summary: CSV Importer doesn't import fees with comma as decimal separator
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: importer (other bugs)
Version First Reported In: git (master)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-06-04 18:56 UTC by wojnilowicz
Modified: 2019-08-29 01:27 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1,5.0.0
Sentry Crash Report:


Attachments
CSV Test File (336 bytes, text/csv)
2016-06-04 18:58 UTC, wojnilowicz
Details
Column Assignment for CSV file (96.70 KB, image/png)
2016-06-04 18:59 UTC, wojnilowicz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description wojnilowicz 2016-06-04 18:56:47 UTC
CSV Importer doesn't import fees with comma as decimal separator

Reproducible: Always

Steps to Reproduce:
1. File->Import->CSV
2. Select "Investments" and create new profile
3. Press select file and choose attached "test file.csv"
4. Set field delimiter to "comma" and text delimiter to "quotes" and press next
5. Assign columns according to attached image and press next
6. Set date format as "y m d" and press next
7. Set decimal symbol to "comma" and press "Import CSV"

Actual Results:  
Fee 3,56 isn't imported for this transaction
2016-01-20,MONNARI,Kupno,20,12,240,MON,"3,56"

Expected Results:  
Fee 3,56 should be imported for this transaction
2016-01-20,MONNARI,Kupno,20,12,240,MON,"3,56"
Comment 1 wojnilowicz 2016-06-04 18:58:37 UTC
Created attachment 99366 [details]
CSV Test File
Comment 2 wojnilowicz 2016-06-04 18:59:44 UTC
Created attachment 99368 [details]
Column Assignment for CSV file
Comment 3 wojnilowicz 2016-06-18 17:23:32 UTC
Git commit 5796089e8cc2b9951ce8e32cfb87f7a1dd9d9f20 by Łukasz Wojniłowicz.
Committed on 18/06/2016 at 17:22.
Pushed by wojnilowicz into branch '4.8'.

Fix importing fees with comma as decimal separator
REVIEW: 128100

M  +21   -11   kmymoney/plugins/csvimport/investprocessing.cpp

http://commits.kde.org/kmymoney/5796089e8cc2b9951ce8e32cfb87f7a1dd9d9f20
Comment 4 Cristian Oneț 2016-06-18 18:09:02 UTC
Git commit bbdfda2597c502ebcc3a9ce20958132abfdebec4 by Cristian Oneț, on behalf of Łukasz Wojniłowicz.
Committed on 18/06/2016 at 18:06.
Pushed by conet into branch 'master'.

Fix importing fees with comma as decimal separator
REVIEW: 128100
(cherry picked from commit 5796089e8cc2b9951ce8e32cfb87f7a1dd9d9f20)

M  +21   -11   kmymoney/plugins/csvimport/investprocessing.cpp

http://commits.kde.org/kmymoney/bbdfda2597c502ebcc3a9ce20958132abfdebec4