Fix importing fees with comma as decimal separator

BUG: 363954
REVIEW: 128100
(cherry picked from commit 5796089e8cc2b9951ce8e32cfb87f7a1dd9d9f20)